Basic_변수와 자료형

--- a/Python/Basic/02. 변수와 자료형.ipynb
+++ b/Python/Basic/02. 변수와 자료형.ipynb
@@ -452,11 +452,694 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello World!'"
+      ]
+     },
+     "execution_count": 216,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 기본형 (한 줄)\n",
+    "var01 = \"Hello World!\"\n",
+    "var01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Hello World!\n",
+      "    Good to Meet You!\n",
+      "tab 없이도 출력 가능하다\n",
+      "안에 적는 내용 그대로 출력\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 여러줄의 문자열 자료형\n",
+    "var01 = \"\"\"\n",
+    "    Hello World!\n",
+    "    Good to Meet You!\n",
+    "tab 없이도 출력 가능하다\n",
+    "안에 적는 내용 그대로 출력\n",
+    "\"\"\"\n",
+    "var01\n",
+    "print(var01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My fathers wife is \n",
+      "my mother.\n",
+      "He says \t\"I love you.\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 쌍따옴표와 홑따옴표, \\n, \\t\n",
+    "print(\"My fathers wife is \\nmy mother.\")\n",
+    "print('He says \\t\"I love you.\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pythonis fun.\n",
+      "Python is fun.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 여러 문자열 연결해서 출력 (+ or ,)\n",
+    "var01 = \"Python\"\n",
+    "var02 = \"is fun.\"\n",
+    "print(var01 + var02)\n",
+    "print(var01, var02)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PythonPythonPython\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 연속으로 같은 문자열 출력 (*)\n",
+    "print(var01*3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 문자열 Indexing과 Slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "abc\n",
+      "n\n",
+      "fghijklmn\n",
+      "fghijkl\n",
+      "fghijk\n"
+     ]
+    }
+   ],
+   "source": [
+    "str = \"abcdefghijklmn\"\n",
+    "\n",
+    "print(str[0])           # indexing\n",
+    "print(str[0:3])         # 0 ~ (3 - 1)번쨰 까지 출력\n",
+    "print(str[-1])          # 가장 마지막 순서 인덱스 출력\n",
+    "print(str[5:])          # 5번쨰 인덱스부터 끝까지 출력\n",
+    "print(str[5:-2])        # 5번쨰 인덱스부터 끝의 2개 제외하고 출력\n",
+    "print(str[5:-3])        # 5번쨰 인덱스부터 끝의 3개 제외하고 출력                                                             "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 6]\n",
+      "다\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 중첩 인덱싱\n",
+    "mylist = [['가', '나', '다'], [4, 5, 6], 7, 8, 9]\n",
+    "print(mylist[1])\n",
+    "print(mylist[0][2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[100, 300, 500]\n",
+      "[500, 400, 300, 200, 100]\n",
+      "[500, 300, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# indexing -  Step 활용\n",
+    "mylist = [100, 200, 300, 400, 500]\n",
+    "print(mylist[::2])      # 2칸씩 건너 뛰기\n",
+    "print(mylist[::-1])     # 역순으로 출력\n",
+    "print(mylist[::-2])     # 역순으로 2칸씩 건너 뛰기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Snow\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 예제 : 2020 1229 Snow 출력되도록 하기\n",
+    "str = \"20201229Snow\"\n",
+    "print(str[-4:])\n",
+    "print(str[:4])              # 처음 부터 4개 문자\n",
+    "print(str[4:8])             # 인덱스 4번부터 (8-1)번째 까지 (8번쨰 전까지)\n",
+    "print(str[8:])              # 인덱스 8번부터 끝까지\n",
+    "print(str[:4], str[4:8], str[8:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcde\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 예제 : abcde 출력되도록 하기\n",
+    "str = \"abbde\"\n",
+    "print(str[:2] + \"c\" + str[3:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 문자열 Formatting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I hane 2 apples.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 정수 (d)\n",
+    "print(\"I have %d apples.\"%2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.1416\n",
+      "    3.1416\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 실수\n",
+    "print(\"%0.4f\"%3.14159)              # 실수 소수점 아래 4자리 표현\n",
+    "print(\"%10.4f\"%3.14159)             # 전체 10자리 실수 표현"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I hane two apples.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문자열 (s)\n",
+    "print(\"I have %s apples.\"%\"two\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I have 2 apple\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 여러 개의 변수를 사용\n",
+    "number = 2\n",
+    "fruit = \"apple\"\n",
+    "print(\"I have %d %s\"%(number, fruit))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I have 2     apples.\n",
+      "I have 2 apples    .\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문자열 정렬\n",
+    "print(\"I have 2 %10s.\"%\"apples\")  # 우측 정렬(자릿수 10자리)\n",
+    "print(\"I have 2 %-10s.\"%\"apples\") # 좌측 정렬(자릿수 10자리)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 고급 문자열 Formatting"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "1:11:23"
+    "# format 함수\n",
+    "# 2:09:16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 문자열 관련 함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# count() & len() : 문자의 개수, 문자열의 길이 세는 함수\n",
+    "str = \"I have a dream.\"\n",
+    "print(str.count('a'))\n",
+    "print(len(str))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "0\n",
+      "-1\n",
+      "e\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find() : 찾고자 하는 문자의 인덱스 반환\n",
+    "print(str.find('e'))\n",
+    "print(str.find('I'))\n",
+    "print(str.find('x'))\n",
+    "print(str[str.find('e')])    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "0\n",
+      "-1\n",
+      "e\n"
+     ]
+    }
+   ],
+   "source": [
+    "# rfind() : 찾고자 하는 문자를 오른쪽부터 찾아서 인덱스 반환\n",
+    "str = \"I have a dream.\"\n",
+    "print(str.rfind('e'))\n",
+    "print(str.rfind('I'))\n",
+    "print(str.rfind('x'))\n",
+    "print(str[str.rfind('e')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "I\n"
+     ]
+    }
+   ],
+   "source": [
+    "# startswith() : 접두사로 문장 찾기\n",
+    "str = \"I have a dream.\"\n",
+    "print(str.startswith('e'))\n",
+    "print(str.startswith('I'))\n",
+    "print(str.startswith('x'))\n",
+    "print(str[str.startswith('e')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n",
+      "I\n"
+     ]
+    }
+   ],
+   "source": [
+    "# endswith() : 접두사로 문장 찾기\n",
+    "str = \"I have a dream.\"\n",
+    "print(str.endswith('m'))\n",
+    "print(str.endswith('I'))\n",
+    "print(str.endswith('x'))\n",
+    "print(str[str.endswith('e')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A-B-C-D-E\n",
+      "A**B**C**D**E\n",
+      "A  B  C  D  E\n",
+      "ABCDE\n"
+     ]
+    }
+   ],
+   "source": [
+    "# join() : 문자열 합치기\n",
+    "# 리스트 자료형 합치기\n",
+    "li = ['A', 'B', 'C', 'D', 'E']\n",
+    "print('-'.join(li))\n",
+    "print('**'.join(li))\n",
+    "print('  '.join(li))\n",
+    "print(''.join(li))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1-2-3-4-5\n",
+      "1**2**3**4**5\n",
+      "1  2  3  4  5\n",
+      "12345\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dictionary_key를 이용하여 합치기\n",
+    "dic = {'1':'A', '2': 'B', '3': 'C', '4': 'D', '5': 'E'}\n",
+    "print('-'.join(dic))\n",
+    "print('**'.join(dic))\n",
+    "print('  '.join(dic))\n",
+    "print(''.join(dic))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HI\n",
+      "hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "# upper() / lower()\n",
+    "str = 'Hi'\n",
+    "print(str.upper())\n",
+    "print(str.lower())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n",
+      "hello\n",
+      "hi   I am studying Python!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 공백 제거\n",
+    "# 오른쪽 공백 제거\n",
+    "str = 'hi       '\n",
+    "print(str.rstrip())\n",
+    "\n",
+    "# 공백 제거\n",
+    "str = '       hello'\n",
+    "print(str.lstrip())\n",
+    "\n",
+    "# 모든 공백 제거\n",
+    "str = '   hi   I am studying Python!      '\n",
+    "print(str.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi this is Jin's studying \n",
+      " this is Jin's studying notes.\n",
+      " this is jin's studying \n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문자 제거\n",
+    "str = \"Hi this is Jin's studying notes.\"\n",
+    "print(str.rstrip('notes.'))\n",
+    "print(str.lstrip('Hi'))\n",
+    "print(str.lower().strip('itenosh.'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Life is too short to be unhappy\n",
+      "223333555555\n",
+      "117733555555\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문자열 바꾸기 : replace(바꾸고 싶은 문자열, 바꿀 내용)\n",
+    "str = 'Life is too short to be happy'\n",
+    "print(str.replace('happy', 'unhappy'))\n",
+    "\n",
+    "str = '113333555555'\n",
+    "print(str.replace('1', '2'))\n",
+    "print(str.replace('3', '7', 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "split A :  ['1', '2', '3']\n",
+      "A 리스트 요소 개수 :  5\n",
+      "split B :  ['1', '2,3,4,5']\n",
+      "B 리스트 요소 개수 :  9\n",
+      "split C :  ['1', '2', '', '3', '']\n",
+      "C 리스트 요소 개수 :  7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# split() : 문자열 분리\n",
+    "A = '1,2,3'\n",
+    "B = '1,2,3,4,5'\n",
+    "C = '1,2,,3,'\n",
+    "\n",
+    "print(\"split A : \", A.split(','))\n",
+    "print(\"A 리스트 요소 개수 : \", len(A))\n",
+    "print(\"split B : \", B.split(',', maxsplit=1))\n",
+    "print(\"B 리스트 요소 개수 : \", len(B))\n",
+    "print(\"split C : \", C.split(','))\n",
+    "print(\"C 리스트 요소 개수 : \", len(C))"
    ]
   }
  ],
